[tool.poetry]
name = "cipheydocs"
version = "0.1.0"
description = ""
authors = ["Brandon <brandonskerritt51@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^3.1.1"
nox = "^2020.5.24"
poetry = "^1.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
