[tool.poetry]
name = "cipheydocs"
version = "0.1.0"
description = ""
authors = ["Brandon <brandonskerritt51@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^3.1.1"
nox = "^2020.5.24"
poetry = "^1.0.9"
cipheycore = {version = "0.2.2", allow-prereleases = true}
ciphey = {version = "^5.0.0-rc.2", allow-prereleases = true}
sphinx_rtd_theme = "^0.5.0"

[tool.poetry.dev-dependencies]
sphinx-autodoc-typehints = "^1.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
